Remove all mentions to usage rules
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>