@@ -30,50 +30,50 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 class RemedialActionTest {
     @Test
-    void testNoUsageRulesShouldReturnUndefined() {
+    void testNoTriggerConditionsShouldReturnUndefined() {
         State state = Mockito.mock(State.class);
-        Set<TriggerCondition> usageRules = Collections.emptySet();
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Collections.emptySet();
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testOnlyOneOnInstantUsageRule() {
+    void testOnlyOneOnInstantTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(instant).when(state).getInstant();
-        Set<TriggerCondition> usageRules = Set.of(new TriggerConditionImpl(instant, null, null, null, UsageMethod.AVAILABLE));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Set.of(new TriggerConditionImpl(instant, null, null, null, UsageMethod.AVAILABLE));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.AVAILABLE, ra.getUsageMethod(state));
     }
 
     @Test
-    void testStrongestInstantUsageRule() {
+    void testStrongestInstantTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(instant).when(state).getInstant();
-        Set<TriggerCondition> usageRules = Set.of(
+        Set<TriggerCondition> triggerConditions = Set.of(
             new TriggerConditionImpl(instant, null, null, null, UsageMethod.AVAILABLE),
             new TriggerConditionImpl(instant, null, null, Country.FR, UsageMethod.FORCED));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testOnlyOneOnContingencyStateUsageRule() {
+    void testOnlyOneOnContingencyStateTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(false).when(instant).isPreventive();
         Mockito.doReturn(instant).when(state).getInstant();
         Contingency contingency = Mockito.mock(Contingency.class);
         Mockito.when(state.getContingency()).thenReturn(Optional.of(contingency));
-        Set<TriggerCondition> usageRules = Set.of(new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        Set<TriggerCondition> triggerConditions = Set.of(new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE));
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.AVAILABLE, ra.getUsageMethod(state));
     }
 
     @Test
-    void testOnlyStrongestStateUsageRule() {
+    void testOnlyStrongestStateTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(false).when(instant).isPreventive();
@@ -84,15 +84,15 @@ class RemedialActionTest {
         FlowCnec flowCnec = Mockito.mock(FlowCnec.class);
         Mockito.doReturn(state).when(flowCnec).getState();
 
-        Set<TriggerCondition> usageRules = Set.of(
+        Set<TriggerCondition> triggerConditions = Set.of(
             new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE),
             new TriggerConditionImpl(instant, null, flowCnec, null, UsageMethod.FORCED));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testStrongestStateAndInstantUsageRule() {
+    void testStrongestStateAndInstantTriggerCondition() {
         State state = Mockito.mock(State.class);
         Instant instant = Mockito.mock(Instant.class);
         Mockito.doReturn(false).when(instant).isPreventive();
@@ -100,15 +100,15 @@ class RemedialActionTest {
         Contingency contingency = Mockito.mock(Contingency.class);
         Mockito.when(state.getContingency()).thenReturn(Optional.of(contingency));
 
-        Set<TriggerCondition> usageRules = Set.of(
+        Set<TriggerCondition> triggerConditions = Set.of(
             new TriggerConditionImpl(state.getInstant(), state.getContingency().get(), null, null, UsageMethod.AVAILABLE),
             new TriggerConditionImpl(instant, null, null, null, UsageMethod.FORCED));
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(state));
     }
 
     @Test
-    void testDifferentInstantsBetweenOnFlowConstraintUsageRuleAndCnec() {
+    void testDifferentInstantsBetweenOnFlowConstraintTriggerConditionAndCnec() {
         Contingency contingency = Mockito.mock(Contingency.class);
         Instant autoInstant = Mockito.mock(Instant.class);
         Mockito.when(autoInstant.isPreventive()).thenReturn(false);
@@ -127,18 +127,18 @@ class RemedialActionTest {
         FlowCnec curativeFlowCnec = Mockito.mock(FlowCnec.class);
         Mockito.when(curativeFlowCnec.getState()).thenReturn(curativeState);
 
-        Set<TriggerCondition> usageRules = Set.of(
+        Set<TriggerCondition> triggerConditions = Set.of(
             new TriggerConditionImpl(autoInstant, null, autoFlowCnec, null, UsageMethod.FORCED),
             new TriggerConditionImpl(autoInstant, null, curativeFlowCnec, null, UsageMethod.FORCED)
         );
 
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(autoState));
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(curativeState));
     }
 
     @Test
-    void testDifferentInstantsBetweenOnAngleConstraintUsageRuleAndCnec() {
+    void testDifferentInstantsBetweenOnAngleConstraintTriggerConditionAndCnec() {
         Contingency contingency = Mockito.mock(Contingency.class);
         Instant autoInstant = Mockito.mock(Instant.class);
         Mockito.when(autoInstant.isPreventive()).thenReturn(false);
@@ -157,18 +157,18 @@ class RemedialActionTest {
         AngleCnec curativeAngleCnec = Mockito.mock(AngleCnec.class);
         Mockito.when(curativeAngleCnec.getState()).thenReturn(curativeState);
 
-        Set<TriggerCondition> usageRules = Set.of(
+        Set<TriggerCondition> triggerConditions = Set.of(
             new TriggerConditionImpl(autoInstant, null, autoAngleCnec, null, UsageMethod.FORCED),
             new TriggerConditionImpl(autoInstant, null, curativeAngleCnec, null, UsageMethod.FORCED)
         );
 
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(autoState));
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(curativeState));
     }
 
     @Test
-    void testDifferentInstantsBetweenOnVoltageConstraintUsageRuleAndCnec() {
+    void testDifferentInstantsBetweenOnVoltageConstraintTriggerConditionAndCnec() {
         Contingency contingency = Mockito.mock(Contingency.class);
         Instant autoInstant = Mockito.mock(Instant.class);
         Mockito.when(autoInstant.isPreventive()).thenReturn(false);
@@ -187,12 +187,12 @@ class RemedialActionTest {
         VoltageCnec curativeVoltageCnec = Mockito.mock(VoltageCnec.class);
         Mockito.when(curativeVoltageCnec.getState()).thenReturn(curativeState);
 
-        Set<TriggerCondition> usageRules = Set.of(
+        Set<TriggerCondition> triggerConditions = Set.of(
             new TriggerConditionImpl(autoInstant, null, autoVoltageCnec, null, UsageMethod.FORCED),
             new TriggerConditionImpl(autoInstant, null, curativeVoltageCnec, null, UsageMethod.FORCED)
         );
 
-        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", usageRules, Collections.emptySet(), 0);
+        AbstractRemedialAction<?> ra = new NetworkActionImpl("id", "name", "operator", triggerConditions, Collections.emptySet(), 0);
         assertEquals(UsageMethod.FORCED, ra.getUsageMethod(autoState));
         assertEquals(UsageMethod.UNDEFINED, ra.getUsageMethod(curativeState));
     }
